src_v2.output
Terminals unused in grammar

   tCROFERM
   tCROOUVR
   tCHAR
   tNEWLINE
   tTAB
   tBACKSPACE
   tESPACE
   tPOINT


Grammaire

    0 $accept: start $end

    1 start: tINT tMAIN tPAROUVR tPARFERM tACOOUVR rBODY tACOFERM

    2 rBODY: rDECL rBODY
    3      | rAFFECT rBODY
    4      | rPRINTF rBODY
    5      | /* vide */

    6 $@1: /* vide */

    7 rDECL: tINT tVAR $@1 rAFFECT_DECL rMULTIPLEVAR

    8 $@2: /* vide */

    9 rDECL: tCONST tINT tVAR $@2 rAFFECT_DECL rMULTIPLEVAR

   10 $@3: /* vide */

   11 rMULTIPLEVAR: tVIRGULE tVAR $@3 rAFFECT_DECL rMULTIPLEVAR

   12 $@4: /* vide */

   13 rMULTIPLEVAR: tCONST tVIRGULE tVAR $@4 rAFFECT_DECL rMULTIPLEVAR
   14             | tPTVIRGULE

   15 $@5: /* vide */

   16 $@6: /* vide */

   17 rAFFECT: tVAR $@5 tEGAL $@6 rNBR tPTVIRGULE

   18 $@7: /* vide */

   19 rAFFECT_DECL: tEGAL $@7 rNBR
   20             | /* vide */

   21 $@8: /* vide */

   22 $@9: /* vide */

   23 rPRINTF: tPRINTF $@8 tPAROUVR tVAR $@9 tPARFERM tPTVIRGULE

   24 rNBR: tVAR
   25     | tNBR

   26 $@10: /* vide */

   27 rNBR: rNBR tPLUS $@10 rNBR

   28 $@11: /* vide */

   29 rNBR: rNBR tMOINS $@11 rNBR

   30 $@12: /* vide */

   31 rNBR: rNBR tMUL $@12 rNBR

   32 $@13: /* vide */

   33 rNBR: rNBR tDIVISER $@13 rNBR

   34 $@14: /* vide */

   35 rNBR: tPAROUVR $@14 rNBR tPARFERM


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tINT (258) 1 7 9
tMAIN (259) 1
tCONST (260) 9 13
tPARFERM (261) 1 23 35
tPAROUVR (262) 1 23 35
tCROFERM (263)
tCROOUVR (264)
tACOFERM (265) 1
tACOOUVR (266) 1
tCHAR (267)
tMUL (268) 31
tNEWLINE (269)
tTAB (270)
tBACKSPACE (271)
tPLUS (272) 27
tMOINS (273) 29
tPRINTF (274) 23
tDIVISER (275) 33
tEGAL (276) 17 19
tPTVIRGULE (277) 14 17 23
tESPACE (278)
tVIRGULE (279) 11 13
tPOINT (280)
tNBR (281) 25
tVAR (282) 7 9 11 13 17 23 24


Non-terminaux, suivis des règles où ils apparaissent

$accept (28)
    à gauche: 0
start (29)
    à gauche: 1, à droite: 0
rBODY (30)
    à gauche: 2 3 4 5, à droite: 1 2 3 4
rDECL (31)
    à gauche: 7 9, à droite: 2
$@1 (32)
    à gauche: 6, à droite: 7
$@2 (33)
    à gauche: 8, à droite: 9
rMULTIPLEVAR (34)
    à gauche: 11 13 14, à droite: 7 9 11 13
$@3 (35)
    à gauche: 10, à droite: 11
$@4 (36)
    à gauche: 12, à droite: 13
rAFFECT (37)
    à gauche: 17, à droite: 3
$@5 (38)
    à gauche: 15, à droite: 17
$@6 (39)
    à gauche: 16, à droite: 17
rAFFECT_DECL (40)
    à gauche: 19 20, à droite: 7 9 11 13
$@7 (41)
    à gauche: 18, à droite: 19
rPRINTF (42)
    à gauche: 23, à droite: 4
$@8 (43)
    à gauche: 21, à droite: 23
$@9 (44)
    à gauche: 22, à droite: 23
rNBR (45)
    à gauche: 24 25 27 29 31 33 35, à droite: 17 19 27 29 31 33 35
$@10 (46)
    à gauche: 26, à droite: 27
$@11 (47)
    à gauche: 28, à droite: 29
$@12 (48)
    à gauche: 30, à droite: 31
$@13 (49)
    à gauche: 32, à droite: 33
$@14 (50)
    à gauche: 34, à droite: 35


état 0

    0 $accept: . start $end

    tINT  décalage et aller à l'état 1

    start  aller à l'état 2


état 1

    1 start: tINT . tMAIN tPAROUVR tPARFERM tACOOUVR rBODY tACOFERM

    tMAIN  décalage et aller à l'état 3


état 2

    0 $accept: start . $end

    $end  décalage et aller à l'état 4


état 3

    1 start: tINT tMAIN . tPAROUVR tPARFERM tACOOUVR rBODY tACOFERM

    tPAROUVR  décalage et aller à l'état 5


état 4

    0 $accept: start $end .

    $défaut  accepter


état 5

    1 start: tINT tMAIN tPAROUVR . tPARFERM tACOOUVR rBODY tACOFERM

    tPARFERM  décalage et aller à l'état 6


état 6

    1 start: tINT tMAIN tPAROUVR tPARFERM . tACOOUVR rBODY tACOFERM

    tACOOUVR  décalage et aller à l'état 7


état 7

    1 start: tINT tMAIN tPAROUVR tPARFERM tACOOUVR . rBODY tACOFERM

    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tVAR     décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 5 (rBODY)

    rBODY    aller à l'état 12
    rDECL    aller à l'état 13
    rAFFECT  aller à l'état 14
    rPRINTF  aller à l'état 15


état 8

    7 rDECL: tINT . tVAR $@1 rAFFECT_DECL rMULTIPLEVAR

    tVAR  décalage et aller à l'état 16


état 9

    9 rDECL: tCONST . tINT tVAR $@2 rAFFECT_DECL rMULTIPLEVAR

    tINT  décalage et aller à l'état 17


état 10

   23 rPRINTF: tPRINTF . $@8 tPAROUVR tVAR $@9 tPARFERM tPTVIRGULE

    $défaut  réduction par utilisation de la règle 21 ($@8)

    $@8  aller à l'état 18


état 11

   17 rAFFECT: tVAR . $@5 tEGAL $@6 rNBR tPTVIRGULE

    $défaut  réduction par utilisation de la règle 15 ($@5)

    $@5  aller à l'état 19


état 12

    1 start: tINT tMAIN tPAROUVR tPARFERM tACOOUVR rBODY . tACOFERM

    tACOFERM  décalage et aller à l'état 20


état 13

    2 rBODY: rDECL . rBODY

    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tVAR     décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 5 (rBODY)

    rBODY    aller à l'état 21
    rDECL    aller à l'état 13
    rAFFECT  aller à l'état 14
    rPRINTF  aller à l'état 15


état 14

    3 rBODY: rAFFECT . rBODY

    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tVAR     décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 5 (rBODY)

    rBODY    aller à l'état 22
    rDECL    aller à l'état 13
    rAFFECT  aller à l'état 14
    rPRINTF  aller à l'état 15


état 15

    4 rBODY: rPRINTF . rBODY

    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tVAR     décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 5 (rBODY)

    rBODY    aller à l'état 23
    rDECL    aller à l'état 13
    rAFFECT  aller à l'état 14
    rPRINTF  aller à l'état 15


état 16

    7 rDECL: tINT tVAR . $@1 rAFFECT_DECL rMULTIPLEVAR

    $défaut  réduction par utilisation de la règle 6 ($@1)

    $@1  aller à l'état 24


état 17

    9 rDECL: tCONST tINT . tVAR $@2 rAFFECT_DECL rMULTIPLEVAR

    tVAR  décalage et aller à l'état 25


état 18

   23 rPRINTF: tPRINTF $@8 . tPAROUVR tVAR $@9 tPARFERM tPTVIRGULE

    tPAROUVR  décalage et aller à l'état 26


état 19

   17 rAFFECT: tVAR $@5 . tEGAL $@6 rNBR tPTVIRGULE

    tEGAL  décalage et aller à l'état 27


état 20

    1 start: tINT tMAIN tPAROUVR tPARFERM tACOOUVR rBODY tACOFERM .

    $défaut  réduction par utilisation de la règle 1 (start)


état 21

    2 rBODY: rDECL rBODY .

    $défaut  réduction par utilisation de la règle 2 (rBODY)


état 22

    3 rBODY: rAFFECT rBODY .

    $défaut  réduction par utilisation de la règle 3 (rBODY)


état 23

    4 rBODY: rPRINTF rBODY .

    $défaut  réduction par utilisation de la règle 4 (rBODY)


état 24

    7 rDECL: tINT tVAR $@1 . rAFFECT_DECL rMULTIPLEVAR

    tEGAL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 20 (rAFFECT_DECL)

    rAFFECT_DECL  aller à l'état 29


état 25

    9 rDECL: tCONST tINT tVAR . $@2 rAFFECT_DECL rMULTIPLEVAR

    $défaut  réduction par utilisation de la règle 8 ($@2)

    $@2  aller à l'état 30


état 26

   23 rPRINTF: tPRINTF $@8 tPAROUVR . tVAR $@9 tPARFERM tPTVIRGULE

    tVAR  décalage et aller à l'état 31


état 27

   17 rAFFECT: tVAR $@5 tEGAL . $@6 rNBR tPTVIRGULE

    $défaut  réduction par utilisation de la règle 16 ($@6)

    $@6  aller à l'état 32


état 28

   19 rAFFECT_DECL: tEGAL . $@7 rNBR

    $défaut  réduction par utilisation de la règle 18 ($@7)

    $@7  aller à l'état 33


état 29

    7 rDECL: tINT tVAR $@1 rAFFECT_DECL . rMULTIPLEVAR

    tCONST      décalage et aller à l'état 34
    tPTVIRGULE  décalage et aller à l'état 35
    tVIRGULE    décalage et aller à l'état 36

    rMULTIPLEVAR  aller à l'état 37


état 30

    9 rDECL: tCONST tINT tVAR $@2 . rAFFECT_DECL rMULTIPLEVAR

    tEGAL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 20 (rAFFECT_DECL)

    rAFFECT_DECL  aller à l'état 38


état 31

   23 rPRINTF: tPRINTF $@8 tPAROUVR tVAR . $@9 tPARFERM tPTVIRGULE

    $défaut  réduction par utilisation de la règle 22 ($@9)

    $@9  aller à l'état 39


état 32

   17 rAFFECT: tVAR $@5 tEGAL $@6 . rNBR tPTVIRGULE

    tPAROUVR  décalage et aller à l'état 40
    tNBR      décalage et aller à l'état 41
    tVAR      décalage et aller à l'état 42

    rNBR  aller à l'état 43


état 33

   19 rAFFECT_DECL: tEGAL $@7 . rNBR

    tPAROUVR  décalage et aller à l'état 40
    tNBR      décalage et aller à l'état 41
    tVAR      décalage et aller à l'état 42

    rNBR  aller à l'état 44


état 34

   13 rMULTIPLEVAR: tCONST . tVIRGULE tVAR $@4 rAFFECT_DECL rMULTIPLEVAR

    tVIRGULE  décalage et aller à l'état 45


état 35

   14 rMULTIPLEVAR: tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 14 (rMULTIPLEVAR)


état 36

   11 rMULTIPLEVAR: tVIRGULE . tVAR $@3 rAFFECT_DECL rMULTIPLEVAR

    tVAR  décalage et aller à l'état 46


état 37

    7 rDECL: tINT tVAR $@1 rAFFECT_DECL rMULTIPLEVAR .

    $défaut  réduction par utilisation de la règle 7 (rDECL)


état 38

    9 rDECL: tCONST tINT tVAR $@2 rAFFECT_DECL . rMULTIPLEVAR

    tCONST      décalage et aller à l'état 34
    tPTVIRGULE  décalage et aller à l'état 35
    tVIRGULE    décalage et aller à l'état 36

    rMULTIPLEVAR  aller à l'état 47


état 39

   23 rPRINTF: tPRINTF $@8 tPAROUVR tVAR $@9 . tPARFERM tPTVIRGULE

    tPARFERM  décalage et aller à l'état 48


état 40

   35 rNBR: tPAROUVR . $@14 rNBR tPARFERM

    $défaut  réduction par utilisation de la règle 34 ($@14)

    $@14  aller à l'état 49


état 41

   25 rNBR: tNBR .

    $défaut  réduction par utilisation de la règle 25 (rNBR)


état 42

   24 rNBR: tVAR .

    $défaut  réduction par utilisation de la règle 24 (rNBR)


état 43

   17 rAFFECT: tVAR $@5 tEGAL $@6 rNBR . tPTVIRGULE
   27 rNBR: rNBR . tPLUS $@10 rNBR
   29     | rNBR . tMOINS $@11 rNBR
   31     | rNBR . tMUL $@12 rNBR
   33     | rNBR . tDIVISER $@13 rNBR

    tMUL        décalage et aller à l'état 50
    tPLUS       décalage et aller à l'état 51
    tMOINS      décalage et aller à l'état 52
    tDIVISER    décalage et aller à l'état 53
    tPTVIRGULE  décalage et aller à l'état 54


état 44

   19 rAFFECT_DECL: tEGAL $@7 rNBR .
   27 rNBR: rNBR . tPLUS $@10 rNBR
   29     | rNBR . tMOINS $@11 rNBR
   31     | rNBR . tMUL $@12 rNBR
   33     | rNBR . tDIVISER $@13 rNBR

    tMUL      décalage et aller à l'état 50
    tPLUS     décalage et aller à l'état 51
    tMOINS    décalage et aller à l'état 52
    tDIVISER  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 19 (rAFFECT_DECL)


état 45

   13 rMULTIPLEVAR: tCONST tVIRGULE . tVAR $@4 rAFFECT_DECL rMULTIPLEVAR

    tVAR  décalage et aller à l'état 55


état 46

   11 rMULTIPLEVAR: tVIRGULE tVAR . $@3 rAFFECT_DECL rMULTIPLEVAR

    $défaut  réduction par utilisation de la règle 10 ($@3)

    $@3  aller à l'état 56


état 47

    9 rDECL: tCONST tINT tVAR $@2 rAFFECT_DECL rMULTIPLEVAR .

    $défaut  réduction par utilisation de la règle 9 (rDECL)


état 48

   23 rPRINTF: tPRINTF $@8 tPAROUVR tVAR $@9 tPARFERM . tPTVIRGULE

    tPTVIRGULE  décalage et aller à l'état 57


état 49

   35 rNBR: tPAROUVR $@14 . rNBR tPARFERM

    tPAROUVR  décalage et aller à l'état 40
    tNBR      décalage et aller à l'état 41
    tVAR      décalage et aller à l'état 42

    rNBR  aller à l'état 58


état 50

   31 rNBR: rNBR tMUL . $@12 rNBR

    $défaut  réduction par utilisation de la règle 30 ($@12)

    $@12  aller à l'état 59


état 51

   27 rNBR: rNBR tPLUS . $@10 rNBR

    $défaut  réduction par utilisation de la règle 26 ($@10)

    $@10  aller à l'état 60


état 52

   29 rNBR: rNBR tMOINS . $@11 rNBR

    $défaut  réduction par utilisation de la règle 28 ($@11)

    $@11  aller à l'état 61


état 53

   33 rNBR: rNBR tDIVISER . $@13 rNBR

    $défaut  réduction par utilisation de la règle 32 ($@13)

    $@13  aller à l'état 62


état 54

   17 rAFFECT: tVAR $@5 tEGAL $@6 rNBR tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 17 (rAFFECT)


état 55

   13 rMULTIPLEVAR: tCONST tVIRGULE tVAR . $@4 rAFFECT_DECL rMULTIPLEVAR

    $défaut  réduction par utilisation de la règle 12 ($@4)

    $@4  aller à l'état 63


état 56

   11 rMULTIPLEVAR: tVIRGULE tVAR $@3 . rAFFECT_DECL rMULTIPLEVAR

    tEGAL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 20 (rAFFECT_DECL)

    rAFFECT_DECL  aller à l'état 64


état 57

   23 rPRINTF: tPRINTF $@8 tPAROUVR tVAR $@9 tPARFERM tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 23 (rPRINTF)


état 58

   27 rNBR: rNBR . tPLUS $@10 rNBR
   29     | rNBR . tMOINS $@11 rNBR
   31     | rNBR . tMUL $@12 rNBR
   33     | rNBR . tDIVISER $@13 rNBR
   35     | tPAROUVR $@14 rNBR . tPARFERM

    tPARFERM  décalage et aller à l'état 65
    tMUL      décalage et aller à l'état 50
    tPLUS     décalage et aller à l'état 51
    tMOINS    décalage et aller à l'état 52
    tDIVISER  décalage et aller à l'état 53


état 59

   31 rNBR: rNBR tMUL $@12 . rNBR

    tPAROUVR  décalage et aller à l'état 40
    tNBR      décalage et aller à l'état 41
    tVAR      décalage et aller à l'état 42

    rNBR  aller à l'état 66


état 60

   27 rNBR: rNBR tPLUS $@10 . rNBR

    tPAROUVR  décalage et aller à l'état 40
    tNBR      décalage et aller à l'état 41
    tVAR      décalage et aller à l'état 42

    rNBR  aller à l'état 67


état 61

   29 rNBR: rNBR tMOINS $@11 . rNBR

    tPAROUVR  décalage et aller à l'état 40
    tNBR      décalage et aller à l'état 41
    tVAR      décalage et aller à l'état 42

    rNBR  aller à l'état 68


état 62

   33 rNBR: rNBR tDIVISER $@13 . rNBR

    tPAROUVR  décalage et aller à l'état 40
    tNBR      décalage et aller à l'état 41
    tVAR      décalage et aller à l'état 42

    rNBR  aller à l'état 69


état 63

   13 rMULTIPLEVAR: tCONST tVIRGULE tVAR $@4 . rAFFECT_DECL rMULTIPLEVAR

    tEGAL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 20 (rAFFECT_DECL)

    rAFFECT_DECL  aller à l'état 70


état 64

   11 rMULTIPLEVAR: tVIRGULE tVAR $@3 rAFFECT_DECL . rMULTIPLEVAR

    tCONST      décalage et aller à l'état 34
    tPTVIRGULE  décalage et aller à l'état 35
    tVIRGULE    décalage et aller à l'état 36

    rMULTIPLEVAR  aller à l'état 71


état 65

   35 rNBR: tPAROUVR $@14 rNBR tPARFERM .

    $défaut  réduction par utilisation de la règle 35 (rNBR)


état 66

   27 rNBR: rNBR . tPLUS $@10 rNBR
   29     | rNBR . tMOINS $@11 rNBR
   31     | rNBR . tMUL $@12 rNBR
   31     | rNBR tMUL $@12 rNBR .
   33     | rNBR . tDIVISER $@13 rNBR

    $défaut  réduction par utilisation de la règle 31 (rNBR)


état 67

   27 rNBR: rNBR . tPLUS $@10 rNBR
   27     | rNBR tPLUS $@10 rNBR .
   29     | rNBR . tMOINS $@11 rNBR
   31     | rNBR . tMUL $@12 rNBR
   33     | rNBR . tDIVISER $@13 rNBR

    tMUL      décalage et aller à l'état 50
    tDIVISER  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 27 (rNBR)


état 68

   27 rNBR: rNBR . tPLUS $@10 rNBR
   29     | rNBR . tMOINS $@11 rNBR
   29     | rNBR tMOINS $@11 rNBR .
   31     | rNBR . tMUL $@12 rNBR
   33     | rNBR . tDIVISER $@13 rNBR

    tMUL      décalage et aller à l'état 50
    tDIVISER  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 29 (rNBR)


état 69

   27 rNBR: rNBR . tPLUS $@10 rNBR
   29     | rNBR . tMOINS $@11 rNBR
   31     | rNBR . tMUL $@12 rNBR
   33     | rNBR . tDIVISER $@13 rNBR
   33     | rNBR tDIVISER $@13 rNBR .

    $défaut  réduction par utilisation de la règle 33 (rNBR)


état 70

   13 rMULTIPLEVAR: tCONST tVIRGULE tVAR $@4 rAFFECT_DECL . rMULTIPLEVAR

    tCONST      décalage et aller à l'état 34
    tPTVIRGULE  décalage et aller à l'état 35
    tVIRGULE    décalage et aller à l'état 36

    rMULTIPLEVAR  aller à l'état 72


état 71

   11 rMULTIPLEVAR: tVIRGULE tVAR $@3 rAFFECT_DECL rMULTIPLEVAR .

    $défaut  réduction par utilisation de la règle 11 (rMULTIPLEVAR)


état 72

   13 rMULTIPLEVAR: tCONST tVIRGULE tVAR $@4 rAFFECT_DECL rMULTIPLEVAR .

    $défaut  réduction par utilisation de la règle 13 (rMULTIPLEVAR)
